Spanish Ministry and a lot of effects for the focus tree

--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -3,8 +3,28 @@
   ##########################
   # IDEAS
   ##########################
+SPR_PB_Mola_HOG:0 "Emilio Mola"
+PB_Old_Civil_Engineer:0 "Old Civil Engineer"
+SPR_PB_Alfonso_Pena_Boeuf_EM:0 "Alfonso Peña Boeuf"
+SPR_PB_Francisco_Gomez_Jordanaa_Sousa_FM:0 "Francisco Gómez-Jordana Sousa"
+SPR_PB_Ramon_Serrano_Suner_IM:0 "Ramón Serrano Suñer"
+PB_Failed_Agriculture_Minister:0 "Failed Agricultural Minister"
+SPR_PB_Raimundo_Fernandez_Cuesta:0 "Raimundo Fernández-Cuesta"
 
 
+
+SPR_unemployment_down:0 "§YUnemployment Issue lowers§!"
+PB_SPR_working_factories:0 "Working Factories"
+PB_SPR_working_factories_1:0 "Working Factories"
+PB_SPR_military_coup_3:0 "The Mary coup"
+PB_SPR_military_coup_3_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
+PB_SPR_reconstruction_authority_1:0 "Autoridad Española de Reconstrucción"
+PB_SPR_unemployment_issue:0 "Unemployment Issue (Dramatic)"
+PB_SPR_unemployment_issue_1:0 "Unemployment Issue (Big)"
+PB_SPR_unemployment_issue_2:0 "Unemployment Issue (Medium)"
+PB_SPR_unemployment_issue_3:0 "Unemployment Issue (Small)"
+PB_SPR_military_coup_2:0 "The Mary coup"
+PB_SPR_military_coup_2_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
 PB_SPR_reconstruction_authority:0 "Autoridad Española de Reconstrucción"
 PB_SPR_unions_gone:0 "Crushed Unions"
 PB_SPR_unions_stay:0 "Cooperation with the Unions"
@@ -137,6 +157,10 @@ SPR_prepare_for_invasion:0 "Prepare the Invasion Forces"
 SPR_send_an_ultimatum:0 "The Galicia Ultimatum"
 SPR_join_the_revanchiste_pact:0 "Join the Revanchist Pacte"
 SPR_militarize_the_portuguese_border:0 "Militarize the Portuguese Border"
+
+SPR_PART_1:0 "§GHas improved the Mining Sector§!"
+SPR_PART_2:0 "§GHas cracked down upon the Drug Market§!"
+SPR_PART_3:0 "§GHas restarted the Old Factories§!"
   ##########################
   # EVENTS
   ##########################
@@ -217,6 +241,14 @@ spain.22.a:0 "National-Syndicalist Economics"
 spain.22.b:0 "Pre-Enlightenment Economics"
 spain.22.c:0 "Free Market Economics"
 SPR_EDUCATION_CHAIN:0 "§GAn event chain will allow us to decide our new education curriculum and what to teach the next politically active generation of Spain.§!"
+spain.23.t:0 "Deal with the Steel Barons"
+spain.23.d:0 "The recent expansion of the steel industry in Aragon has clearly had its benefits for both the government and a small group of factory owners, known as the steel barons. These steel barons have, however, become a threat to our national economy, acting increasingly independent from the other industries of Spain and spoiling themselves with unimaginable riches. The government has thus been assembled to discuss this situation. The Falangist Party of Primo de Rivera has made it clear that the steel barons are a threat to the future of Spain and, with imperialist support, has proposed the nationalization of the steel industry in their crusade against capitalism. The monarchists parties, seeing the threat that the Falange poses, have united in their opinion, proposing private investments in the factories for both government and personal benefit. At last, the CEDA, being generally a fan of the free market, has made it clear that the government could subsidize the factories, as to improve the state treasury and the general welfare of the people of Aragon. The debate has clearly started to become heated, as both the Falange and the CEDA are to eachothers throats. How should we solve this problem?"
+spain.23.a:0 "Follow the CEDA method of subsidizing"
+spain.23.b:0 "Private monarchist investments would work better"
+spain.23.c:0 "Nationalize the factories, as the falangists told us"
+spain.24.t:0 "Unemployment Issue Returns"
+spain.24.d:0 "Before the Mary Coup, Spain was camping with a huge unemployment issue, as many veterans of the Great War were unable to work in the factories. The later economic recession under the Spanish Republic would also increase the amount of unemployed people and would swiftly paralyze the Spanish economy, as almost 20% of Spanish working men did not have a job. With the Mary Coup and the extensive army expansion, these unemployed were finally able to work. However, the recent economic conversion has, once again, made these people unemployed and many fear that the situation could spiral out of the governments control. Thus, it's critical that we fix the unemployment issue."
+spain.24.a:0 "We're going to fix it!"
   ##########################
   # Decisions
   ##########################
