Minor Pre-Vacation Work

--- a/localisation/PB_State_Modifiers_l_english.yml
+++ b/localisation/PB_State_Modifiers_l_english.yml
@@ -1,3 +1,7 @@
 ﻿l_english:
 
-  Under_British_Influence:0 "Under British Influence"
+  Under_British_Influence:0 "Under The United Kingdom's Influence"
+  Under_British_Influence_desc:0 "This state is under the influence of §YThe United Kingdom§!"
+  Under_Russian_Influence:0 "Under The Russian Empire's Influence"
+  Under_German_Influence:0 "Under The German Empire's Influence"
+  Under_Japanese_Influence:0 "Under The Republic of Japan's Influence"
