--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -3,6 +3,7 @@
   ##########################
   # IDEAS
   ##########################
+PB_SPR_return_to_civil_economy:0 "Return to Civil Economy"
 SPR_PB_Mola_HOG:0 "Emilio Mola"
 PB_Old_Civil_Engineer:0 "Old Civil Engineer"
 SPR_PB_Alfonso_Pena_Boeuf_EM:0 "Alfonso Peña Boeuf"
@@ -10,9 +11,9 @@ SPR_PB_Francisco_Gomez_Jordanaa_Sousa_FM:0 "Francisco Gómez-Jordana Sousa"
 SPR_PB_Ramon_Serrano_Suner_IM:0 "Ramón Serrano Suñer"
 PB_Failed_Agriculture_Minister:0 "Failed Agricultural Minister"
 SPR_PB_Raimundo_Fernandez_Cuesta:0 "Raimundo Fernández-Cuesta"
-
-
-
+PB_SPR_reconstruction_authority_3:0 "Autoridad Española de Reconstrucción" 
+PB_SPR_reconstruction_authority_2:0 "Autoridad Española de Reconstrucción"
+PB_SPR_return_of_the_vehicle_industry:0 "Return of the Vehicle Industry"
 SPR_unemployment_down:0 "§YUnemployment Issue lowers§!"
 PB_SPR_working_factories:0 "Working Factories"
 PB_SPR_working_factories_1:0 "Working Factories"
@@ -249,6 +250,16 @@ spain.23.c:0 "Nationalize the factories, as the falangists told us"
 spain.24.t:0 "Unemployment Issue Returns"
 spain.24.d:0 "Before the Mary Coup, Spain was camping with a huge unemployment issue, as many veterans of the Great War were unable to work in the factories. The later economic recession under the Spanish Republic would also increase the amount of unemployed people and would swiftly paralyze the Spanish economy, as almost 20% of Spanish working men did not have a job. With the Mary Coup and the extensive army expansion, these unemployed were finally able to work. However, the recent economic conversion has, once again, made these people unemployed and many fear that the situation could spiral out of the governments control. Thus, it's critical that we fix the unemployment issue."
 spain.24.a:0 "We're going to fix it!"
+spain.25.t:0 "Promotion of the Sherry Region"
+spain.25.d:0 "Due to increased governmental effort to promote the important Sherry region, Spain has begun to experience an influx of British, French, German, Russian, Italian and Dutch tourists, all coming to Spain to experience the tasty Sherry wine. Our promotion has clearly helped develop the lower regions of Spain like Andalusia and Sevilla and has created a tourist industry comparable to the beaches of the Costa Brava in Catalonia."
+spain.25.a:0 "Life is great in Andalusia"
+spain.26.t:0 "New Entertainment"
+spain.26.d:0 "With the return to a civilian economy, the demand for entertainment has once again skyrocketed in Spain. The government has taken a liking to the new civilian economy and has clearly seen the potential for influencing the market. Thus, a debate between the parties of the national movement has started regarding the new purpose of entertainment. Every party seem to support the idea of propagating their values through media, with the falangists and CEDA being the biggest supporters of it."
+spain.26.a:0 "Support the values of military cooperation through the media"
+spain.26.b:0 "Romanticize the medieval era"
+spain.26.c:0 "Fantasize about the old days before the republic, during the war"
+spain.26.e:0 "Idealize family and christianity under the republic"
+
   ##########################
   # Decisions
   ##########################
