--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -824,3 +824,7 @@
  STATE_823:0 "Aydin"
  STATE_824:0 "Danish Antilles"
  STATE_826:0 "Port-Philippe"
+ STATE_827:0 "Acre"
+ STATE_828:0 "Acrean Amazonas"
+ STATE_829:0 "Granadan Amazonas"
+ STATE_830:0 "Goias do Sul"
