--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -436,10 +436,10 @@
  VICTORY_POINTS_5107:0 "Fortaleza"
  VICTORY_POINTS_5168:0 "Récife"
  VICTORY_POINTS_10447:0 "Porto Alegre"
- VICTORY_POINTS_10513:0 "Elias da Silva"
- VICTORY_POINTS_10946:0 "Trotsquia"
+ VICTORY_POINTS_10513:0 "Sao Paulo"
+ VICTORY_POINTS_10946:0 "Salvador"
  VICTORY_POINTS_12853:0 "Nequete"
- VICTORY_POINTS_10362:0 "Montevidéu"
+ VICTORY_POINTS_10362:0 "Montevideo"
  VICTORY_POINTS_12364:0 "Buenos Aires"
  VICTORY_POINTS_7500:0 "Rosario"
  VICTORY_POINTS_7621:0 "Mar del Plata"
@@ -637,3 +637,4 @@
  VICTORY_POINTS_10842:0 "Quetzaltenango"
  VICTORY_POINTS_7887:0 "Kirikiriroa"
  VICTORY_POINTS_8241:0 "Invercargill"
+ VICTORY_POINTS_10960:0 "Porto Acre"
