UAE Decentralization Changes

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -199,6 +199,7 @@
   PB_ENG_Reinforce_HBC:0 "Reinforce the Alaskan Border"
 
   PB_Seek_New_Officers:0 "Seek New Officers"
+  PB_Doctrine_Debates:0 "Examine New Doctrines"
 
   ##########################
   # TOOLTIPS
