Lot of Spanish events, focusses, etc and Italian events and state changes

--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -158,7 +158,19 @@ SPR_prepare_for_invasion:0 "Prepare the Invasion Forces"
 SPR_send_an_ultimatum:0 "The Galicia Ultimatum"
 SPR_join_the_revanchiste_pact:0 "Join the Revanchist Pacte"
 SPR_militarize_the_portuguese_border:0 "Militarize the Portuguese Border"
-
+SPR_treaty_of_a_coruna:0 "Treaty of A Coruña"
+SPR_renew_the_terms:0 "Renew the Terms"
+SPR_propaganda_use:0 "Propaganda Use"
+SPR_secret_rearmement:0 "Secret Rearmament"
+SPR_build_up_industry:0 "Warplan Verde"
+SPR_rebuild_an_airforce:0 "Rebuild the Spanish Airforces"
+SPR_propaganda_use:0 "Propaganda Against the British"
+SPR_join_your_regional_militia:0 "Join your Regional Division!"
+SPR_reveal_our_production:0 "Reveal our Military"
+SPR_meeting_in_valencia:0 "Meeting in Valencia"
+SPR_apply_french_pressure:0 "Apply French Pressure"
+SPR_demand_the_right_to_rearm:0 "Demand the Right to Rearm"
+SPR_diplomatic_victory:0 "Diplomatic Victory in Valencia"
 SPR_PART_1:0 "§GHas improved the Mining Sector§!"
 SPR_PART_2:0 "§GHas cracked down upon the Drug Market§!"
 SPR_PART_3:0 "§GHas restarted the Old Factories§!"
@@ -259,6 +271,10 @@ spain.26.a:0 "Support the values of military cooperation through the media"
 spain.26.b:0 "Romanticize the medieval era"
 spain.26.c:0 "Fantasize about the old days before the republic, during the war"
 spain.26.e:0 "Idealize family and christianity under the republic"
+spain.27.t:0 "Issue of Our Flag"
+spain.27.d:0 "The recent falangist victory has left Spain with Primo de Rivera as the absolute ruler and the Falangist Party as the only legal party. Thus, the issue of the party's flag has been brought up. The main question asked by party officials, is if the party is Spain or Spain is the party. Can the party flag truely represent Spain and its identity, or will the normal flag that has flown across Spain for centuries do?"
+spain.27.a:0 "Keep the normal flag"
+spain.27.b:0 "Adopt the party flag"
 
   ##########################
   # Decisions
@@ -337,5 +353,9 @@ PB_SPR_spanish_civil_war_desc:0 "Our initial victory against the weak Republican
  SPN_ds_ADJ:0 "Spanish"
  SPN_cn_ADJ:0 "Spanish"
  SPN_an_ADJ:0 "Spanish"
+
+SPR_FAL_ni:0 "Spain"
+SPR_FAL_ni_DEF:0 "Spanish State"
+
 ##########Descriptions for leaders####
 SPR_Mola_Desc:0 "Born on the 9th of July, 1887, on the tropical island of Cuba, Emilio Mola would never know rest in his life. Soon after his birth, the familie split, with the maternal branch joining the revolutionaries and Mola's father serving the Spanish forces. Quickly moving to the Spanish kingdom, Mola enrolled in the §YInfantry Academy of Toledo§! around 1910, serving in the Rif War as a Brigadier-General. Becoming one of Alfonso's favorites, Mola was rewarded with the position of Director-General of Security in 1906, being responsible for the growing Republican issue. However, his career as Director-General was short, as the §YSpanish Civil War of 1910§! would end the reign of Alfonso the 13th. The new Republican government initially wanted Mola executed for his royalist opinion, but with the help of CEDA and Falangist members, Mola became a military governor in §YNavarre§!. There he was able to drum up far-right support and, during the §YMary Coup§! was swiftly able to complete conquer the Basque region for the nationalist government. The death of Sanjurjo would, once again, begin Mola's career as Head of State. His paranoia has become a trademark of the Spanish security and his fear for the fifth column has drove Spain to near-constant purging."
