--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -26,9 +26,12 @@
   # FOCUSES
   ##########################
   PB_ENG_King_Death:0 "The Death of the King"
+  PB_ENG_King_Death_desc:0 "After suffering illness after illness, King George V slept peacefully at midnight, and with it, a new dawn shall arise. Eventually, King Edward VIII shall assume the throne, although the future of the empire remains uncertain, as our nation is facing a paradigm shift never before seen in the British Isles."
   PB_ENG_London_Stock_Crisis:0 "The London Stock Crisis"
+  PB_ENG_London_Stock_Crisis_desc:0 "It happened, it actually happened.\n\nThe stock market has crashed, with its value cut in half and many businesses at risk of collapse. We must do whatever it takes to fix this crisis, or else we may face an uncertain and undesirable outcome in the future..."
 
   PB_ENG_General_Election:0 "The General Election"
+  PB_ENG_General_Election_desc:0 "The General Elections are finally here, and this election shall decide the fate of not only Britain and her economy, but the rest of the empire as a whole. All political parties in the spectrum, from the Worker's Union to the NPP, are vying for power, with varying policies that may strengthen or shaken the empire, so vote wisely."
   PB_ENG_StateSoc_Victory:0 "Worker's Union Victory"
   PB_ENG_National_Housing:0 "National Housing Initiative"
   PB_ENG_Trade_Union_Cooperation:0 "Approach the Trade Unions"
