Habsburg Germany and UK Focus Work Continued

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -203,6 +203,15 @@
 
   PB_Seek_New_Officers:0 "Seek New Officers"
   PB_Doctrine_Debates:0 "Examine New Doctrines"
+  PB_Seek_New_Officers:0 "Seek New Officers"
+  PB_Doctrine_Debates:0 "Examine New Doctrines"
+  PB_Maintain_Course:0 "Retain the Old Doctrines"
+  PB_Throw_out_Old_Doctrine:0 "Throw Out the Old Doctrines"
+  PB_Static_Defense:0 "Emphasize Static Defense"
+  PB_Mass_Motorization:0 "Mass Motorization"
+  PB_Defensive_Army:0 "A Defensive Army"
+  PB_Offensive_Army:0 "An Offensive Army"
+  PB_Fortress_Britain:0 "Fortress Britain"
 
   ##########################
   # TOOLTIPS
