--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -253,6 +253,7 @@
   PB_ENG_Imperial_Confederation_Head_desc:0 "The United Kingdom is the current center of the British Imperial Confederation. The Imperial Parliament, located in London, is attended by all Constituent Commonwealths and Dominions of the British Empire. All Commonwealth nations are granted the right to elect Ministers of Imperial Parliament (MIPs) to represent them in inter-empire affairs. Though once a shining example of imperial cooperation, the Confederation has become increasingly ineffective at actually rectifying the Empire's myriad of problems. \n\n Hampered by bureacracy and the increasing assertiveness of the American Commonwealth, the Confederation is seen by many as an archaic relic of 19th century imperial policy."
   PB_ENG_Parliament_Compromises:0 "Parliamentary Compromises"
   PB_ENG_Opposition_Enforced_Concessions:0 "Opposition Enforced Concessions"
+  ENG_the_slump:0 "The Great Slump"
 
   ##########################
   # PARLIAMENT MECHANICS
@@ -288,3 +289,7 @@
   ##########################
   ENG_Edward_VIII_Desc:0 "His Majesty, King-Emperor Edward VIII has arisen to the crown with the death of his father, King George V. He finds himself reigning over a troubled nation, and an even more troubled empire. Noted for his open distaste for the rising popularity of the Worker's Union party, many leftists now fear that Edward might abandon his political neutrality as King to interfere in politics. Amidst economic and political uncertainty, Edward's rise to power and lack of concern for constitutional processes has done little to ease the government's worries."
   ENG_King_George_Desc:0 "Born George Frederick Ernest Albert in 1865, His Royal Highness King George V, Emperor of India and the British Empire, is in many ways a man that lives within the shadow of his father. Succeeding Edward VII after his death in 1910, George inherited an empire utterly traumatized by the single most horrific conflict in human history. With Europe clutched tight in the grip of economic depression, only economic isolationism could prevent privation, and so George V oversaw the establishment of Britain's diplomatic and economic isolationism from Europe. George V is most known for the catastrophic failure of the Indian Campaign, which saw the warhawk conservative goverment attempt to bolster their popularity with a quick campaign into India, hoping to finally rectify a black stain on British imperial history. George V openly endorsed the campaign and, when British forces were forced to halt due to heavy losses, his credability and the credability of the conservatives was badly damaged. This would ultimately force the conservatives into a coalition government with the Whig party in the subsequent elections. Now, in 1933, George's health has begun to fail him. Frequently ill and delegating affairs to the rest of the Royal family, many fear that George's death is imminent."
+
+  ##########################
+  # PUPPET AUTONOMY
+  ##########################
