British Work Continued

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -253,7 +253,8 @@
   PB_ENG_Imperial_Confederation_Head_desc:0 "The United Kingdom is the current center of the British Imperial Confederation. The Imperial Parliament, located in London, is attended by all Constituent Commonwealths and Dominions of the British Empire. All Commonwealth nations are granted the right to elect Ministers of Imperial Parliament (MIPs) to represent them in inter-empire affairs. Though once a shining example of imperial cooperation, the Confederation has become increasingly ineffective at actually rectifying the Empire's myriad of problems. \n\n Hampered by bureacracy and the increasing assertiveness of the American Commonwealth, the Confederation is seen by many as an archaic relic of 19th century imperial policy."
   PB_ENG_Parliament_Compromises:0 "Parliamentary Compromises"
   PB_ENG_Opposition_Enforced_Concessions:0 "Opposition Enforced Concessions"
-  ENG_the_slump:0 "The Great Slump"
+  PB_ENG_Great_Slump:0 "The Great Slump"
+  PB_ENG_Crippling_Unemployment:0 "Crippling Unemployment"
 
   ##########################
   # PARLIAMENT MECHANICS
@@ -283,6 +284,22 @@
   britain.1.t:0 "The End of an Era"
   britain.1.d:0 ""
   britain.1.a:0 "The King is dead. Long Live the King."
+
+  britain.2.t:0 "The Stock Crisis"
+  britain.2.d:0 ""
+  britain.2.a:0 "Just a slight ripple. It'll pass."
+
+  britain.3.t:0 "The Crisis Deepens"
+  britain.3.d:0 ""
+  britain.3.a:0 "This is bad."
+
+  britain.4.t:0 "Picking up the Pieces"
+  britain.4.d.0 ""
+  britain.4.a:0 "At least the coalition is still intact"
+
+  britain.5.t:0 "The Coalition Collapses"
+  britain.5.d:0 ""
+  britain.5.a:0 "Oh for god's sake."
 
   ##########################
   # EVENTS
