Italian states added

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -65,7 +65,86 @@ italy.7.a:0 "Italy has hit a low point"
 italy.8.t:0 "Issue of the Loans"
 italy.8.d:0 "With the recent worldwide collapse of the economic system, several nations have scrambled to Italy, demanding the repayment of loans given to our economic minister, Carlos of Bourbon, which he used for the expansion of the industry during the years after the Great War. While the extend of his loans is unknown to parliament and even the king himself, the debt we've gained due to him has been staggering, almost hitting 250% of our GDP. Such an amount of debt is unpresidented in the history of the mediterranean nations. The government is currently in a political crisis, divided on the very issue of repaying the debts at all. Several liberal and nationalist parties have proposed defaulting the national debt, hoping for the best. While a high risk move, it could potentially solve the debt issue. The more conservative parties, however, are not fans of the high risk of defaulting the national debt and have proposed the simple solution of just repaying the loans to the demanding nations."
 italy.8.a:0 "The debate continues"
+italy.9.t:0 "The End of Italy?"
+italy.9.d:0 "Due to a serie of unfortunate events, Italy has been split between the nations of old that once reigned prior to the rissorgimento. Their fortune is our misfortune, as the old Italian kingdom is no more. The question now remains: Should we continue to claim the legacy of Italy and reconquer the peninsula piece by piece, or accept our fate and rejoice as the kingdom of Two Sicilies under our isolated royal family?"
+italy.9.a:0 "Italy is not yet lost!"
+italy.9.b:0 "Our roots, we shall never forget..."
+
   ##########################
   # FOCUSSES
   ##########################
   POR_Country_Desc_Topbar:0 "§YThe Kingdom of Portugal§! is a secondary power in Europe in 1933.\n\nThe Empire of Portugal ended with the Brazilian war of Independence, as any relevance Portugal had was lost after losing its primary colony of Brazil. The empire went into an economic decline, quickly becoming one of the poorest countries in Europe. During the Great War, Portugal was scared to get entangled into the web of conflict stretched across Europe. However, British pressure and the threat of Spanish dominance forced Portugal into the Great War, becoming the main front of the §YIberian campaign§! that claimed so many innocent, young lives in the grinding machine of war. \n\nPortuguese troops were able to break the Spanish front in 1908, eventually leading to Spain capitulating on the 7th of may, 1910, sparking §Ythe Spanish Civil War§! with the Portguese troops stuck in the middle of it. Portuguese troops had to quickly redeploy to Galicia and the Portuguese-Spanish border, but not before several more young men were taken in front of our very own eyes. \n\nThe end of the Great War would see Portugal returning to its economic instability and colonial ventures, holding onto our relationship with Britain. However, Manuel II had started to create political enemies, such as §YThe Portuguese Republican Party§! and its paramilitary wing §YThe Liberated Youth§!: While enjoying popular support, the Republican Party itself is divided to its core ideologically, based upon a jacobin-liberal split. Only if Portugal would actively be in an international or national crisis, would the Republican party have a chance of challenging Manuel's reign. Still, Portugal's political landscape has been marked with the blood of politicians and monarchs for decades. What could stop that from happening under Manuel II? \n\nThe §YKingdom of Portugal§! is a §Ysecondary power§!"
+ITA_LOSES_CORES:0 "§RThe Kingdom of Two Sicilies will lose all its cores on the Italian peninsula and will only be able to regain them through conquest and embracing Italian nationalism once more."
+
+  ##########################
+  # RELEASABLES
+  ##########################
+SAV_ni:0 "Kingdom of Sardinia"
+SAV_ds:0 "Kingdom of Sardinia"
+SAV_rc:0 "Kingdom of Sardinia"
+SAV_cn:0 "Savoy"
+SAV_ss:0 "Savoy"
+SAV_an:0 "Savoy"
+SAV_lb:0 "Savoy"
+SAV_jc:0 "Savoy"
+
+TUS_ni:0 "Duchy of Tuscany"
+TUS_ds:0 "Duchy of Tuscany"
+TUS_rc:0 "Duchy of Tuscany"
+TUS_cn:0 "Tuscany"
+TUS_lb:0 "Tuscany"
+TUS_an:0 "Tuscany"
+TUS_ss:0 "Tuscany"
+TUS_jc:0 "Florence Republic"
+
+LMB_ni:0 "Kingdom of Lombardy"
+LMB_ds:0 "Duchy of Milan"
+LMB_rc:0 "Duchy of Milan"
+LMB_cn:0 "Milan"
+LMB_lb:0 "Milan"
+LMB_an:0 "Milan"
+LMB_ss:0 "Milan"
+LMB_jc:0 "Lombardian Republic"
+
+VNC_ni:0 "Venetian Empire"
+VNC_ds:0 "Duchy of Venice"
+VNC_rc:0 "Duchy of Venice"
+VNC_cn:0 "Republic of Venice"
+VNC_lb:0 "Republic of Venice"
+VNC_an:0 "Republic of Venice"
+VNC_ss:0 "Republic of Venice"
+VNC_jc:0 "Venetian Commune"
+
+PRM_ds:0 "Parma"
+PRM_ni:0 "Parma"
+PRM_rc:0 "Parma"
+PRM_cn:0 "Parma"
+PRM_lb:0 "Parma"
+PRM_an:0 "Parma"
+PRM_ss:0 "Parma"
+PRM_jc:0 "Parma"
+
+MOD_ds:0 "Duchy of Modena"
+MOD_ni:0 "Modena"
+MOD_rc:0 "Duchy of Modena"
+MOD_cn:0 "Duchy of Modena"
+MOD_lb:0 "Republic of Modena"
+MOD_an:0 "Modena"
+MOD_ss:0 "Republic of Modena"
+MOD_jc:0 "Republic of Modena"
+
+PAP_ni:0 "Roman Empire"
+PAP_ds:0 "Papal States"
+PAP_rc:0 "Papal States"
+PAP_cn:0 "Papal States"
+PAP_lb:0 "Roman Republic"
+PAP_ss:0 "Roman Republic"
+PAP_jc:0 "Roman Republic"
+
+ITA_TWO_SICILIES_ds:0 "Kingdom of Two Sicilies"
+ITA_TWO_SICILIES_ni:0 "Kingdom of Two Sicilies"
+ITA_TWO_SICILIES_rc:0 "Kingdom of Two Sicilies"
+ITA_TWO_SICILIES_cn:0 "Kingdom of Two Sicilies"
+ITA_TWO_SICILIES_lb:0 "Kingdom of Two Sicilies"
+ITA_TWO_SICILIES_ss:0 "Kingdom of Two Sicilies"
+ITA_TWO_SICILIES_jc:0 "Southern Italian Republic"
