--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -828,6 +828,9 @@
  STATE_828:0 "Acrean Amazonas"
  STATE_829:0 "Granadan Amazonas"
  STATE_830:0 "Goias do Sul"
- STATE_825:0 "STATE_825" STATE_831:1 "Nice"
-
+ STATE_825:0 "STATE_825\" STATE_831:1 \"Nice"
  STATE_832:1 "Upper Savoy"
+ STATE_831:0 "STATE_831"
+ STATE_833:0 "Southern Abruzzo"
+ STATE_834:0 "Parma"
+ STATE_835:0 "Modena"
