--- a/localisation/PB_autonomy_l_english.yml
+++ b/localisation/PB_autonomy_l_english.yml
@@ -17,6 +17,7 @@
 
  autonomy_PB_Emir_Elector:0 "Emir Elector"
 
+ autonomy_PB_Personal_Union:0 "Junior Partner"
 
  PB_can_raise_autonomy_level:0 "Can Raise Autonomy Level"
  PB_can_lose_autonomy_level:0 "Can Lower Autonomy Level"
