Initial France Work and Redone loading screens

--- a/localisation/PB_factions_l_english.yml
+++ b/localisation/PB_factions_l_english.yml
@@ -11,3 +11,5 @@
   COM:0 "Commonwealth of Nations"
   REV:0 "Revanchist Pacte"
   BER:0 "Imperial Powers"
+  UAE:0 "United Arab Emirates"
+  NOR:0 "Northern Defense Committee"
