--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -11,6 +11,9 @@
  LOADING_TIP_9:0 "My measures will not be crippled by any bureaucracy. Here I don't have to worry about Justice; my mission is only to destroy and to exterminate; nothing more.\n- §YAnton Denikin§!"
  LOADING_TIP_10:0 "My honor is my loyalty.\n- §YHeinrich Himmler§!"
  LOADING_TIP_11:0 "Cognitive dissonance is an uncomfortable feeling caused by holding two conflicting ideas simultaneously."
+ LOADING_TIP_12:0 "Golf always makes me so damned angry.\n- §YGeorge V§!"
+ LOADING_TIP_13:0 "Too bad about the young blood.\n- §YErich Luddendorf§!"
+ LOADING_TIP_14:0 "If you don't have ammunition, you have bayonets! Fix bayonets!\n- §YMustafa Kemal Atatürk§!"
 
 
 
