--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1351,22 +1351,22 @@
  SHX_cn_ADJ:0 "Chinese"
  SHX_an_ADJ:0 "Chinese"
 
- CHI_ni:0 "Qing Empire"
- CHI_ni_DEF:0 "Qing Empire"
- CHI_ds:0 "Qing Empire"
- CHI_ds_DEF:0 "Qing Empire"
- CHI_rc:0 "Qing Empire"
- CHI_rc_DEF:0 "Qing Empire"
- CHI_an:0 "Qing Empire"
- CHI_an_DEF:0 "Qing Empire"
- CHI_cn:0 "Qing Empire"
- CHI_cn_DEF:0 "Qing Empire"
- CHI_lb:0 "Qing Empire"
- CHI_lb_DEF:0 "Qing Empire"
- CHI_ss:0 "Qing Empire"
- CHI_ss_DEF:0 "Qing Empire"
- CHI_jc:0 "Qing Empire"
- CHI_jc_DEF:0 "Qing Empire"
+ CHI_ni:0 "Imperial China"
+ CHI_ni_DEF:0 "Imperial China"
+ CHI_ds:0 "Imperial China"
+ CHI_ds_DEF:0 "Imperial China"
+ CHI_rc:0 "Imperial China"
+ CHI_rc_DEF:0 "Imperial China"
+ CHI_an:0 "Imperial China"
+ CHI_an_DEF:0 "Imperial China"
+ CHI_cn:0 "Imperial China"
+ CHI_cn_DEF:0 "Imperial China"
+ CHI_lb:0 "Imperial China"
+ CHI_lb_DEF:0 "Imperial China"
+ CHI_ss:0 "Imperial China"
+ CHI_ss_DEF:0 "Imperial China"
+ CHI_jc:0 "Imperial China"
+ CHI_jc_DEF:0 "Imperial China"
  CHI_ni_ADJ:0 "Chinese"
  CHI_rc_ADJ:0 "Chinese"
  CHI_lb_ADJ:0 "Chinese"
