new Spanish portraits, decisions and beginning of carlist tree

--- a/localisation/PB_Romania_l_english.yml
+++ b/localisation/PB_Romania_l_english.yml
@@ -34,3 +34,14 @@ ROM_ss_party_long:0 "Partidul Social Democrat Român"
 ROM_ss_party:0 "PSDR"
 ROM_jc_party_long:0 "-"
 ROM_jc_party:0 "-"
+
+  ##########################
+  # EVENTS
+  ##########################
+
+romania.1.t:0 "PSIR merges with SPR"
+romania.1.d:0 "Due to the recent popularity of the Romanian far-right and the instability of our current cabinet, many socialist parties are trying to form an united opposition against the Romanian far-right. A clear example of this unification is the recent merge of the PSIR (Partidul Socialist Independent din România) with the Socialist Party of Romania under C. Popovici. The Socialist Party was once a splinter group of the social democrats, abandoning them as they were not radical enough in the eyes of Popovici's followers. The two parties share these radical ideas about republicanism and revolution and have thus merged into the United Socialist Party."
+romania.1.a:0 "They will most likely not achieve anything..."
+romania.2.t:0 "Bombing attack in Bucharest"
+romania.2.d:0 "Shocking news dominated the newspapers of Romania today, as a bombing attack shakes the capital. The one responsible for the attack was quickly arrested by the police, claiming that the attack was planned by him and his comrades of the USP. While evidence is currently lacking to tie the attack with the radical USP, many Romanians have already turned their back on the new party after the attack. The Iron Guard has, as always, reaped the benefit, as the attack nicely fits in their ideology of violent socialism."
+romania.2.a:0 "What a mess..."
