Feel like I should push the unfinished product prior to fucking everything up

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -70,6 +70,33 @@ italy.9.d:0 "Due to a serie of unfortunate events, Italy has been split between 
 italy.9.a:0 "Italy is not yet lost!"
 italy.9.b:0 "Our roots, we shall never forget..."
 
+italy.10.t:0 "Campaign in Rome?"
+italy.10.desc:0 ""
+italy.10.a:0 "Support ANI"
+italy.10.b:0 "Support PPI"
+italy.10.c:0 "Support PLI"
+italy.10.d:0 "Support PSU"
+italy.10.e:0 "Go Back"
+italy.11.t:0 "Campaign in Venice?"
+italy.12.t:0 "Campaign in Sicily?"
+italy.13.t:0 "Campaign in Sardinia?"
+italy.14.t:0 "Campaign in Calabria?"
+italy.15.t:0 "Campaign in Napoli?"
+italy.16.t:0 "Campaign in Abruzzo?"
+italy.17.t:0 "Campaign in Marche?"
+italy.18.t:0 "Campaign in Tuscany?"
+italy.19.t:0 "Campaign in Ravenna?"
+italy.20.t:0 "Campaign in Modena?"
+italy.21.t:0 "Campaign in Lombardy?"
+italy.22.t:0 "Campaign in Parma?"
+italy.23.t:0 "Campaign in Savoy?"
+italy.24.t:0 "Campaign in Nizza?"
+italy.25.t:0 "Campaign in Malta?"
+italy.26.t:0 "Campaign in French Savoy?"
+italy.27.t:0 "Campaign in Trieste?"
+italy.28.t:0 "Campaign in South Tirol?"
+italy.29.t:0 "Campaign in Northern Dalmatia?"
+
   ##########################
   # FOCUSSES
   ##########################
@@ -148,3 +175,122 @@ ITA_TWO_SICILIES_cn:0 "Kingdom of Two Sicilies"
 ITA_TWO_SICILIES_lb:0 "Kingdom of Two Sicilies"
 ITA_TWO_SICILIES_ss:0 "Kingdom of Two Sicilies"
 ITA_TWO_SICILIES_jc:0 "Southern Italian Republic"
+
+#######################
+# FOCUS
+#######################
+ITA_end_of_trade:0 "Problem of Stopped Trade"
+ITA_protectionist_thoughts:0 "Protectionist Policy"
+ITA_continue_liberal_economics:0 "Liberal Market Policy"
+ITA_stimulate_new_trade:0 "Stimulate Foreign Trade Again"
+ITA_improve_cultivation_techniques:0 "Improved Cultivation Techniques"
+ITA_expand_infrastructure:0 "Improve Existing Infrastructure"
+ITA_some_government_intervention:0 "Partial Government Intervention"
+ITA_promote_competitive_industries:0 "Promote Competition"
+ITA_support_local_farmers:0 "Support Local Farmers"
+ITA_sicilian_infrastructure:0 "The Way to Palermo"
+ITA_public_works_investment:0 "Increased Public Spending"
+ITA_balanced_budget:0 "Rebalance the Budget"
+ITA_scrap_the_old_fleet:0 "Scrap the Old Fleet"
+ITA_scrap_the_old_airforce:0 "Renew the Airforce"
+ITA_planned_recovery:0 "Planned Recovery"
+ITA_finish_the_recovery:0 "Light at the End of our Tunnel"
+ITA_special_industrial_projects:0 "Special Industrial Projects"
+ITA_expansive_mining_production:0 "Increase Excavation Production"
+ITA_italian_university:0 "Establishment of the Pontifical University"
+ITA_extraction_research:0 "New Mining Developments"
+ITA_northern_stimulation:0 "Focus on the North"
+ITA_drain_the_marches:0 "Drain the Pontine Marshes"
+ITA_expand_farming_grounds:0 "Expand Agricultural Grounds"
+ITA_dockyard_expansion:0 "Establish the Genoa Naval Academy"
+ITA_economic_miracle:0 "Miracolo Economico"
+ITA_shift_the_capital:0 "Shift the Capital"
+
+#################
+#Decisions
+############
+PB_ITA_support_in_rome:0 "Popularity in Rome"
+PB_ITA_party_popularity_mechanic:0 "State Popularities"
+PB_ITA_party_popularity_mechanic_desc:0 "The several states that make up Italy all have their own, specific, political preferences regarding the parties that dominate Italian politics. The popularity of the parties in the more important regions cement the future of Italian politics, as a party will most likely win if it has one of these provinces (Napoli, for example) on its side during the elections. We should thus not ignore state campaigning if we want any party to win the coming elections."
+PB_ITA_support_in_venezia:0 "Popularity in Venice"
+PB_ITA_support_in_sicily:0 "Popularity in Sicily"
+PB_ITA_support_in_sardinia:0 "Popularity in Sardinia"
+PB_ITA_support_in_calabria:0 "Popularity in Calabria"
+PB_ITA_support_in_naples:0 "Popularity in Napoli"
+PB_ITA_support_in_abruzzo:0 "Popularity in Abruzzo"
+PB_ITA_support_in_marche:0 "Popularity in Marche"
+PB_ITA_support_in_tuscany:0 "Popularity in Tuscany"
+PB_ITA_support_in_ravenna:0 "Popularity in Ravenna"
+PB_ITA_support_in_modena:0 "Popularity in Modena"
+PB_ITA_support_in_lombardy:0 "Popularity in Lombardy"
+PB_ITA_support_in_parma:0 "Popularity in Parma"
+PB_ITA_support_in_turin:0 "Popularity in Savoy"
+PB_ITA_support_in_nice:0 "Popularity in Nizza"
+PB_ITA_support_in_malta:0 "Popularity in Malta"
+PB_ITA_support_in_french_savoy:0 "Popularity in French Savoy"
+PB_ITA_support_in_trieste:0 "Popularity in Trieste"
+PB_ITA_support_in_south_tirol:0 "Popularity in South Tirol"
+PB_ITA_support_in_northern_dalmatia:0 "Popularity in Northern Dalmatia"
+
+PB_ITA_support_in_rome_1:0 "Popularity in Rome"
+PB_ITA_support_in_venezia_1:0 "Popularity in Venice"
+PB_ITA_support_in_sicily_1:0 "Popularity in Sicily"
+PB_ITA_support_in_sardinia_1:0 "Popularity in Sardinia"
+PB_ITA_support_in_calabria_1:0 "Popularity in Calabria"
+PB_ITA_support_in_naples_1:0 "Popularity in Napoli"
+PB_ITA_support_in_abruzzo_1:0 "Popularity in Abruzzo"
+PB_ITA_support_in_marche_1:0 "Popularity in Marche"
+PB_ITA_support_in_tuscany_1:0 "Popularity in Tuscany"
+PB_ITA_support_in_ravenna_1:0 "Popularity in Ravenna"
+PB_ITA_support_in_modena_1:0 "Popularity in Modena"
+PB_ITA_support_in_lombardy_1:0 "Popularity in Lombardy"
+PB_ITA_support_in_parma_1:0 "Popularity in Parma"
+PB_ITA_support_in_turin_1:0 "Popularity in Savoy"
+PB_ITA_support_in_nice_1:0 "Popularity in Nizza"
+PB_ITA_support_in_malta_1:0 "Popularity in Malta"
+PB_ITA_support_in_french_savoy_1:0 "Popularity in French Savoy"
+PB_ITA_support_in_trieste_1:0 "Popularity in Trieste"
+PB_ITA_support_in_south_tirol_1:0 "Popularity in South Tirol"
+PB_ITA_support_in_northern_dalmatia_1:0 "Popularity in Northern Dalmatia"
+
+PB_ITA_support_in_rome_2:0 "Popularity in Rome"
+PB_ITA_support_in_venezia_2:0 "Popularity in Venice"
+PB_ITA_support_in_sicily_2:0 "Popularity in Sicily"
+PB_ITA_support_in_sardinia_2:0 "Popularity in Sardinia"
+PB_ITA_support_in_calabria_2:0 "Popularity in Calabria"
+PB_ITA_support_in_naples_2:0 "Popularity in Napoli"
+PB_ITA_support_in_abruzzo_2:0 "Popularity in Abruzzo"
+PB_ITA_support_in_marche_2:0 "Popularity in Marche"
+PB_ITA_support_in_tuscany_2:0 "Popularity in Tuscany"
+PB_ITA_support_in_ravenna_2:0 "Popularity in Ravenna"
+PB_ITA_support_in_modena_2:0 "Popularity in Modena"
+PB_ITA_support_in_lombardy_2:0 "Popularity in Lombardy"
+PB_ITA_support_in_parma_2:0 "Popularity in Parma"
+PB_ITA_support_in_turin_2:0 "Popularity in Savoy"
+PB_ITA_support_in_nice_2:0 "Popularity in Nizza"
+PB_ITA_support_in_malta_2:0 "Popularity in Malta"
+PB_ITA_support_in_french_savoy_2:0 "Popularity in French Savoy"
+PB_ITA_support_in_trieste_2:0 "Popularity in Trieste"
+PB_ITA_support_in_south_tirol_2:0 "Popularity in South Tirol"
+PB_ITA_support_in_northern_dalmatia_2:0 "Popularity in Northern Dalmatia"
+
+PB_ITA_support_in_rome_3:0 "Popularity in Rome"
+PB_ITA_support_in_venezia_3:0 "Popularity in Venice"
+PB_ITA_support_in_sicily_3:0 "Popularity in Sicily"
+PB_ITA_support_in_sardinia_3:0 "Popularity in Sardinia"
+PB_ITA_support_in_calabria_3:0 "Popularity in Calabria"
+PB_ITA_support_in_naples_3:0 "Popularity in Napoli"
+PB_ITA_support_in_abruzzo_3:0 "Popularity in Abruzzo"
+PB_ITA_support_in_marche_3:0 "Popularity in Marche"
+PB_ITA_support_in_tuscany_3:0 "Popularity in Tuscany"
+PB_ITA_support_in_ravenna_3:0 "Popularity in Ravenna"
+PB_ITA_support_in_modena_3:0 "Popularity in Modena"
+PB_ITA_support_in_lombardy_3:0 "Popularity in Lombardy"
+PB_ITA_support_in_parma_3:0 "Popularity in Parma"
+PB_ITA_support_in_turin_3:0 "Popularity in Savoy"
+PB_ITA_support_in_nice_3:0 "Popularity in Nizza"
+PB_ITA_support_in_malta_3:0 "Popularity in Malta"
+PB_ITA_support_in_french_savoy_3:0 "Popularity in French Savoy"
+PB_ITA_support_in_trieste_3:0 "Popularity in Trieste"
+PB_ITA_support_in_south_tirol_3:0 "Popularity in South Tirol"
+PB_ITA_support_in_northern_dalmatia_3:0 "Popularity in Northern Dalmatia"
